Fix breaking system initialization
Proper initialization (calling constructors, destructors, setting up
exceptions, etc.) wasn't happening because crt0-init.o was not being
linked in.

--- a/libyaul/Makefile
+++ b/libyaul/Makefile
@@ -31,7 +31,8 @@ SPECS:= \
 	common/specs/ip.specs
 
 START_SRCS:= \
-	common/crt0.S
+	common/crt0.S \
+	common/crt0-init.c
 
 LIB_SRCS:= \
 	common/exception.S \
