--- a/tools/bin2c/Makefile
+++ b/tools/bin2c/Makefile
@@ -2,51 +2,11 @@ TARGET:= bin2c
 
 include ../../env.mk
 
-SUB_BUILD:=$(BUILD)/tools/$(TARGET)
-
-CFLAGS:= -O2 \
-	-s \
-	-Wall \
-	-Wextra \
-	-Wuninitialized \
-	-Winit-self \
-	-Wuninitialized \
-	-Wshadow \
-	-Wno-unused \
-	-Wno-parentheses
-
-SRCS:= bin2c.c
-
-OBJS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
-DEPS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
-
 .PHONY: all clean distclean install
 
-all: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+all clean distclean:
 
-$(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
-	$(ECHO)$(CC) -o $@ $(OBJS)
-	$(ECHO)$(STRIP) -s $@
-
-$(BUILD_ROOT)/$(SUB_BUILD):
-	$(ECHO)mkdir -p $@
-
-$(BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
-	$(ECHO)mkdir -p $(@D)
-	$(ECHO)$(CC) -Wp,-MMD,$(BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
-		-c -o $@ $<
-	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD_ROOT)/$(SUB_BUILD)/$*.d
-
-clean:
-	$(ECHO)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
-
-distclean: clean
-
-install: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
-	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(TARGET)$(V_END)\n"
+install: $(TARGET)
+	@printf -- "$(V_BEGIN_BLUE)$(TARGET)$(V_END)\n"
 	$(ECHO)mkdir -p $(INSTALL_ROOT)/bin
 	$(ECHO)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
-
--include $(DEPS)
