Add crude method to add '.exe' to executables

--- a/tools/genromfs/Makefile
+++ b/tools/genromfs/Makefile
@@ -1,6 +1,7 @@
-TARGET:= genromfs
-
 include ../../env.mk
+
+TARGET:= genromfs
+PROGRAM:= $(TARGET)$(EXE_EXT)
 
 SUB_BUILD:=$(BUILD)/tools/$(TARGET)
 
@@ -16,15 +17,16 @@ CFLAGS:= -O2 \
 	-Wno-parentheses
 
 SRCS:= genromfs.c
+INCLUDES:= /usr/include
 
 OBJS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
 DEPS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
 
 .PHONY: all clean distclean install
 
-all: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+all: $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 
-$(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
+$(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
 	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)$(CC) -o $@ $(OBJS)
 	$(ECHO)$(STRIP) -s $@
@@ -36,16 +38,17 @@ $(BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
 	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)mkdir -p $(@D)
 	$(ECHO)$(CC) -Wp,-MMD,$(BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
+		$(foreach DIR,$(INCLUDES),-I$(DIR)) \
 		-c -o $@ $<
 	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD_ROOT)/$(SUB_BUILD)/$*.d
 
 clean:
-	$(ECHO)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+	$(ECHO)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 
 distclean: clean
 
-install: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
-	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(TARGET)$(V_END)\n"
+install: $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(PROGRAM)$(V_END)\n"
 	$(ECHO)mkdir -p $(INSTALL_ROOT)/bin
 	$(ECHO)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
 	@printf -- "$(V_BEGIN_BLUE)fsck.genromfs$(V_END)\n"
