Refactor lib* Makefiles to avoid reinstalling files without change
The Makefiles have been simplified. Installing is now much faster as
well.

Release internal has been removed.

This closes #46

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,4 @@
 PROJECTS:= \
-	bcl \
 	bin2c \
 	bin2o \
 	genromfs \
@@ -18,6 +17,6 @@ endif
 all clean distclean install:
 	$(ECHO)mkdir -p $(BUILD_ROOT)/$(BUILD)
 	$(ECHO)for tool in $(PROJECTS); do \
-		printf -- "$(V_BEGIN_CYAN)$@$(V_END) $(V_BEGIN_GREEN)tools/$$tool$(V_END)\n"; \
-		($(MAKE) -C $$tool $@) || exit $$?; \
+		printf -- "$(V_BEGIN_CYAN)tools $${tool}$(V_END) $(V_BEGIN_GREEN)$@$(V_END)\n"; \
+		($(MAKE) -C $${tool} $@) || exit $${?}; \
 	done
