Update yaul.env.in to more sane values

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -1,18 +1,13 @@
 # -*- mode: config -*-
 
-# Copyright (c) 2012-2016
-# See LICENSE for details.
-#
-# Israel Jacquez <mrkotfw@gmail.com>
-
 # Only ABSOLUTE paths are to be used when applicable!
 
 # Path to tool-chain installation directory. This assumes 'sh-elf' and
 # 'm68k-elf' cross-compilers are installed
-export INSTALL_ROOT=${HOME}/tool-chains
+export INSTALL_ROOT=/opt/tool-chains
 
 # Path to where the build is to be located
-export BUILD_ROOT=${HOME}/work/libyaul
+export BUILD_ROOT=${HOME}/libyaul
 
 # Name of build directory
 export BUILD=build
@@ -21,4 +16,4 @@ export BUILD=build
 #  0: None
 #  1: USB flash cartridge
 #  2: Datel Action Replay cartridge
-export OPTION_DEV_CARTRIDGE=1
+export OPTION_DEV_CARTRIDGE=0
