Buildscripts: adjust LDFLAGS for other platforms
* -static doesn't work on Darwin, which doesn't provide a static
  version of its libc
* -static-libgcc only works for GCC

--- a/build-scripts/m68k-elf/scripts/build
+++ b/build-scripts/m68k-elf/scripts/build
@@ -11,6 +11,19 @@
 
 is_var_set "target"
 
+extra_ldflags=""
+# Darwin does not support the -static flag, because its libc
+# is not shipped as a static library.
+if [ "${HOST_OS}" != "Darwin" ]; then
+    extra_ldflags="-static"
+fi
+
+# -static-libgcc is only relevant for GCC
+compiler_version="$(${CC-gcc} --version 2>&1)"
+if ! echo "${compiler_version}" | grep -E -q "(clang|Apple LLVM) version"; then
+    extra_ldflags="${extra_ldflags} -static-libgcc"
+fi
+
 # Build and install Binutils
 mkdir -p "${BUILD_SRC_DIR}/${target}/binutils"
 cd "${BUILD_SRC_DIR}/${target}/binutils"
@@ -34,7 +47,7 @@ fi
 if ! [ -f "${BUILD_STAMPS_DIR}/${target}-configured-binutils" ]; then
     message "Configuring Binutils"
     CFLAGS="" \
-    LDFLAGS="-static -static-libgcc -static-libstdc++" ../"${BINUTILS_SRC_DIR}"/configure \
+    LDFLAGS="$extra_ldflags -static-libstdc++" ../"${BINUTILS_SRC_DIR}"/configure \
         ${binutils_configure_options[@]} 1>> "${BUILD_SRC_DIR}/binutils-${target}.log" 2>&1 \
         || panic "See '${BUILD_SRC_DIR}/binutils-${target}.log'" 1
     create_stamp "${target}-configured-binutils"
