--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 language: c
 
 services:
-- docker
+  - docker
 
 env:
   global:
@@ -25,9 +25,9 @@ env:
     - OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=tools
 
 before_script:
-- docker pull ijacquez/libyaul-tool-chain:1.2
+  - docker pull ijacquez/libyaul-tool-chain:1.3
 
 script:
-- docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "BUILD_TYPE=${BUILD_TYPE}" -e "INSTALL_ROOT=${INSTALL_ROOT}"  -e "BUILD_ROOT=${BUILD_ROOT}" -e "BUILD=${BUILD}" -e "OPTION_DEV_CARTRIDGE=${OPTION_DEV_CARTRIDGE}" -w /tmp -t -d ijacquez/libyaul-tool-chain:1.2 sh
-- docker cp .ci-build.sh container:/tmp/.ci-build.sh
-- docker exec container sh -e /tmp/.ci-build.sh
+  - docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "BUILD_TYPE=${BUILD_TYPE}" -e "INSTALL_ROOT=${INSTALL_ROOT}" -e "BUILD_ROOT=${BUILD_ROOT}" -e "BUILD=${BUILD}" -e "OPTION_DEV_CARTRIDGE=${OPTION_DEV_CARTRIDGE}" -t -d ijacquez/libyaul-tool-chain:1.3 sh
+  - docker cp .ci-build.sh container:/root/.ci-build.sh
+  - docker exec container sh -e /root/.ci-build.sh
