Allow ssload to be compiled under MinGW
This is a total mess. libftdi has no issues compiling on either
MinGW-64 or MinGW-32, but neither actually work. In particular, ssload
can't claim the USB device.

It's only libftdi1.dll from SatLink does ssload work. Why? I haven't
been able to find the reason why. No version of libftdi works
either. From 1.2 to 1.4, none works. Note, libftdi.dll is actually
libftdi.dll (version 0.20). Could this be due to the libusb win32
drivers?

The solution is to build a 32-bit version of ssload on Windows, so
libftdi.dll from SatLink can be used.

Another solution is to simply use the official FTDI API.

--- a/tools/ssload/Makefile
+++ b/tools/ssload/Makefile
@@ -33,8 +33,14 @@ INCLUDES+= ./libftd2xx/release
 LIB_DIRS+= ./libftd2xx/release/build/$(shell uname -m)
 LIBS+= ftd2xx dl pthread rt
 else
-CFLAGS+= $(shell pkg-config --cflags libftdi)
-LDFLAGS+= $(shell pkg-config --libs libftdi)
+ifneq ($(strip $(HAVE_LIBFTDI1_32BIT)),)
+INCLUDES+= libftdi1-1.4/include/libftdi1 libusb-1.0/include/libusb-1.0
+LIB_DIRS+= libftdi1-1.4/lib libusb-1.0/lib
+LIBS+= ftdi1 usb-1.0
+else
+CFLAGS+= $(shell pkg-config --cflags libftdi1)
+LDFLAGS+= $(shell pkg-config --libs libftdi1)
+endif
 endif
 
 ifneq ($(strip $(DEBUG)),)
